--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DevConnection": "Server=localhost;Database=libraryManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
