Dodano modele Autor, Czytelnik, Wypozyczenie i baze danych.

--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LibraryConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
