--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=libraryManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=libraryManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;",
+    "LibraryManagementSystemContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryManagementSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
